# SignLine

./: README.md  __init__.py  app_bar.py  app_state.py  components.py  main.py  pyproject.toml  splash_screen.py  theme.py
.github/workflows/: main.yml
services/: __init__.py  asr_service.py  audio_filter.py  bluetooth_service.py  db_service.py  glove_parser.py  mic_capture.py  permission_service.py  stt_service.py  train_dataset.py  train_glove.py  tts_service.py  vosk_asr_service.py
tabs/: __init__.py  glove_tab.py  history_tab.py  settings_tab.py  speech_tab.py
