[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "SignLine"
version = "1.1.0"
description = "Offline Android Flet app for speech to text with local history and Bluetooth output."
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Speak & Sign Team", email = "pasuquinargie29@gmail.com" }
]
dependencies = [
    "flet==0.85.1",
    "faster-whisper>=1.2.1,<2.0; platform_system != 'Android'",
    "vosk>=0.3.45; platform_system != 'Android'",
    "sounddevice>=0.5.1; platform_system != 'Android'",
    "SpeechRecognition>=3.10.0; platform_system != 'Android'",
    "scikit-learn>=1.5.0; platform_system != 'Android'",
    "scipy>=1.14.0; platform_system != 'Android'",
    "plyer>=2.1.0",
    "pyttsx3>=2.90; platform_system != 'Android'",
    "pyjnius>=1.6.1; platform_system != 'Windows'",
    "numpy>=2.0.0",
    "python-dotenv>=1.2.2",
    "flet-permission-handler>=0.85.1",
]

[dependency-groups]
dev = [
    "flet-cli==0.85.1",
    "flet-desktop==0.85.1",
    "flet-web==0.85.1",
]

[tool.flet]
org = "com.signline"
product = "SignLine"
company = "SignLine"
copyright = "Copyright (C) 2026 SignLine"

[tool.flet.app]
path = "."
module = "main.py"

[tool.flet.splash]
android = false
ios = false

[tool.flet.android]
min_sdk_version = 24
target_sdk_version = 35
adaptive_icon_background = "#2563EB"

[tool.flet.android.permission]
"android.permission.RECORD_AUDIO" = true
"android.permission.BLUETOOTH" = true
"android.permission.BLUETOOTH_ADMIN" = true
"android.permission.BLUETOOTH_SCAN" = true
"android.permission.BLUETOOTH_CONNECT" = true
"android.permission.BLUETOOTH_ADVERTISE" = true
"android.permission.ACCESS_FINE_LOCATION" = true
"android.permission.INTERNET" = true
"android.permission.ACCESS_NETWORK_STATE" = true

[tool.setuptools]
py-modules = ["main", "app_bar", "app_state", "components", "theme", "splash_screen"]

[tool.setuptools.packages.find]
include = ["services*", "tabs*"]
